@@ -1,32 +1,38 @@
 package mods.gregtechmod.objects.blocks.teblocks.container;
 
 import ic2.core.slot.SlotInvSlot;
+import mods.gregtechmod.inventory.SlotInteractive;
 import mods.gregtechmod.objects.blocks.teblocks.computercube.ComputerCubeGuide;
 import mods.gregtechmod.objects.blocks.teblocks.computercube.TileEntityComputerCube;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.inventory.ClickType;
 import net.minecraft.inventory.Slot;
 import net.minecraft.item.ItemStack;
+import one.util.streamex.IntStreamEx;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public class ContainerComputerCubeGuide extends ContainerComputerCube {
-    public final List<Slot> displaySlots;
+    public final List<? extends Slot> displaySlots;
 
-    public ContainerComputerCubeGuide(TileEntityComputerCube base) {
-        super(base, 206);
+    public ContainerComputerCubeGuide(EntityPlayer player, TileEntityComputerCube base) {
+        super(player, base, 206);
         
+        addSlotToContainer(SlotInteractive.serverOnly(190, 146, () -> {
+            ((ComputerCubeGuide) base.getActiveModule()).previousPage();
+            displayStacks();
+            detectAndSendChanges();
+        }));
+        addSlotToContainer(SlotInteractive.serverOnly(206, 146, () -> {
+            ((ComputerCubeGuide) base.getActiveModule()).nextPage();
+            displayStacks();
+            detectAndSendChanges();
+        }));
+
         ComputerCubeGuide module = (ComputerCubeGuide) base.getActiveModule();
-        
-        addSlotToContainer(new Slot(base, -1, 190, 146));
-        addSlotToContainer(new Slot(base, -1, 206, 146));
-
-        this.displaySlots = IntStream.range(0, 5)
+        this.displaySlots = IntStreamEx.range(0, 5)
                 .mapToObj(i -> new SlotInvSlot(module.displayStacks, i, 206, 38 + 18 * i))
                 .peek(this::addSlotToContainer)
-                .collect(Collectors.toList());
+                .toList();
         
         displayStacks();
     }
@@ -44,21 +50,5 @@ public class ContainerComputerCubeGuide extends ContainerComputerCube {
                         
             slot.onSlotChanged();
         }
-    }
-
-    @Override
-    public ItemStack slotClick(int slotId, int dragType, ClickType clickType, EntityPlayer player) {
-        ComputerCubeGuide module = (ComputerCubeGuide) this.base.getActiveModule();
-        
-        if (slotId == 1) {
-            module.previousPage();
-            displayStacks();
-        }
-        else if (slotId == 2) {
-            module.nextPage();
-            displayStacks();
-        }
-        
-        return super.slotClick(slotId, dragType, clickType, player);
     }
 }
